Add `vault_init` role.

--- a/extensions/molecule/default/converge.yml
+++ b/extensions/molecule/default/converge.yml
@@ -1,7 +1,8 @@
 ---
 - name: Converge
   hosts: all
-  tasks:
-    - name: Install Vault Server
-      ansible.builtin.include_role:
-        name: dubzland.vault.vault_install
+  collections:
+    - dubzland.vault
+  roles:
+    - role: vault_install
+    - role: vault_init
