--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -2,6 +2,7 @@ ansible-core>=2.13.0
 ansible-lint>=6.21.0
 antsibull-docs
 docker>=6.1.0
+jmespath
 yamllint==1.32.0
 pre-commit
 -r requirements-test.txt
