Split vault server into a separate role.

--- a/galaxy.yml
+++ b/galaxy.yml
@@ -16,6 +16,7 @@ tags:
 
 dependencies:
   "community.general": "*"
+  "dubzland.utils": "*"
 
 repository: https://git.dubzland.com/dubzland/ansible-collection-vault
 
