--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -5,5 +5,6 @@
     - dubzland.vault
   roles:
     - role: vault_install
+    - role: vault_server
     - role: vault_init
     - role: vault_unseal
