--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -108,6 +108,7 @@ molecule:
     - if: $CI_PIPELINE_SOURCE == "merge_request_event"
       changes:
         paths:
+          - .gitlab-ci.yml
           - molecule/**/*
           - roles/**/*
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
@@ -121,6 +122,7 @@ molecule-release:
     - if: $CI_COMMIT_TAG
       changes:
         paths:
+          - .gitlab-ci.yml
           - molecule/**/*
           - roles/**/*
 
