--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -142,7 +142,7 @@ docs:
       antsibull-docs sphinx-init \
         --use-current \
         --dest-dir dest \
-        dubzland.gitlab
+        dubzland.vault
     - cd dest
     - pip install -r requirements.txt
     - ./build.sh
