--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,216 +1,37 @@
 ---
+include:
+  - project: 'dubzland/ci-templates'
+    file: 'ansible-collection.yml'
+
 variables:
-  DOCKER_BUILDKIT: 1
-  DOCKER_TLS_CERTDIR: "/certs"
-  BASH_ENV: /root/.bashrc
-  GIT_CLONE_PATH: $CI_BUILDS_DIR/ansible/collections/ansible_collections/$CI_PROJECT_NAMESPACE/vault
-  REGISTRY_PROXY_URL: ${CI_DEPENDENCY_PROXY_GROUP_IMAGE_PREFIX}/
-  XDG_CACHE_DIR: "$CI_PROJECT_DIR/.cache"
-  PIP_CACHE_DIR: "$XDG_CACHE_DIR/pip"
-  PY_COLORS: "1"
-  ANSIBLE_FORCE_COLOR: "1"
-  PACKAGE_REGISTRY_URL: "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/generic/"
+  DUBZLAND_COLLECTION_NAME: vault
 
-stages:
-  - lint
-  - test
-  - build
-  - deploy
-
-.ansible:
-  cache:
-    paths:
-      - .cache/pip/
-
-.minimal-ci:
-  variables:
-    PYTHON_VERSION: "3.12"
-    ANSIBLE_VERSION: "stable-2.16"
-
-.full-ci:
-  parallel:
-    matrix:
-      - PYTHON_VERSION: "3.9"
-        ANSIBLE_VERSION:
-          - "stable-2.14"
-          - "stable-2.15"
-      - PYTHON_VERSION: "3.10"
-        ANSIBLE_VERSION:
-          - "stable-2.14"
-          - "stable-2.15"
-          - "stable-2.16"
-          - "devel"
-          - "milestone"
-      - PYTHON_VERSION: "3.11"
-        ANSIBLE_VERSION:
-          - "stable-2.14"
-          - "stable-2.15"
-          - "stable-2.16"
-          - "devel"
-          - "milestone"
-      - PYTHON_VERSION: "3.12"
-        ANSIBLE_VERSION:
-          - "stable-2.16"
-          - "devel"
-          - "milestone"
-
-.sanity:
-  stage: lint
-  image: ${CI_DEPENDENCY_PROXY_GROUP_IMAGE_PREFIX}/jdubz/ci-python:${PYTHON_VERSION}
-  before_script:
-    - echo -e "[global]\ncache-dir = $PIP_CACHE_DIR" > /etc/pip.conf
-    - python -m pip install https://github.com/ansible/ansible/archive/${ANSIBLE_VERSION}.tar.gz
-  script:
-    - ansible-test sanity --local --requirements --junit
-  artifacts:
-    when: always
-    reports:
-      junit: tests/output/**/*.xml
-
-.molecule:
-  stage: test
-  image: ${CI_DEPENDENCY_PROXY_GROUP_IMAGE_PREFIX}/jdubz/ci-python:${PYTHON_VERSION}-docker
-  services:
-    - name: ${CI_DEPENDENCY_PROXY_GROUP_IMAGE_PREFIX}/docker:24.0.7-dind
-      alias: docker
-  before_script:
-    - docker login -u $CI_DEPENDENCY_PROXY_USER -p $CI_DEPENDENCY_PROXY_PASSWORD $CI_DEPENDENCY_PROXY_SERVER
-    - echo -e "[global]\ncache-dir = $PIP_CACHE_DIR" > /etc/pip.conf
-    - python -m pip install https://github.com/ansible/ansible/archive/${ANSIBLE_VERSION}.tar.gz
-    - python -m pip install -r requirements.txt
-    - python -m pip install -r requirements-test.txt
-  script:
-    - molecule test
+lint:
+  extends: .ansible:lint
 
 sanity:
-  extends:
-    - .ansible
-    - .minimal-ci
-    - .sanity
-  rules:
-    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
-    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+  extends: .ansible:sanity
 
 sanity-release:
-  extends:
-    - .ansible
-    - .full-ci
-    - .sanity
-  rules:
-    - if: $CI_COMMIT_TAG
+  extends: .ansible:sanity-release
 
 molecule:
-  extends:
-    - .ansible
-    - .minimal-ci
-    - .molecule
-  rules:
-    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
-      changes:
-        paths:
-          - .gitlab-ci.yml
-          - molecule/**/*
-          - roles/**/*
-    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+  extends: .ansible:molecule
 
 molecule-release:
-  extends:
-    - .ansible
-    - .full-ci
-    - .molecule
-  rules:
-    - if: $CI_COMMIT_TAG
-      changes:
-        paths:
-          - .gitlab-ci.yml
-          - molecule/**/*
-          - roles/**/*
+  extends: .ansible:molecule-release
 
 docs:
-  extends: .ansible
-  stage: test
-  image: ${CI_DEPENDENCY_PROXY_GROUP_IMAGE_PREFIX}/jdubz/ci-python:3.12
-  variables:
-    ANSIBLE_COLLECTIONS_PATH: $CI_BUILDS_DIR/ansible/collections
-  before_script:
-    - apk add rsync
-    - python -m pip install -r requirements-dev.txt
-  script:
-    - set -e
-    - mkdir dest
-    - |
-      antsibull-docs sphinx-init \
-        --use-current \
-        --dest-dir dest \
-        dubzland.vault
-    - cd dest
-    - pip install -r requirements.txt
-    - ./build.sh
-  rules:
-    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
-    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+  extends: .ansible-collection:docs
 
 build:
-  stage: build
-  image: ${CI_DEPENDENCY_PROXY_GROUP_IMAGE_PREFIX}/jdubz/ci-python:3.10
-  variables:
-    ANSIBLE_COLLECTIONS_PATH: $CI_BUILDS_DIR/ansible/collections
-  cache:
-    paths:
-      - .cache/pip/
-  before_script:
-    - python -m pip install ansible-core
-  script:
-    - ansible-galaxy collection build
-    - sha256sum "${CI_PROJECT_NAMESPACE}-vault-${CI_COMMIT_TAG}.tar.gz" > "${CI_PROJECT_NAMESPACE}-vault-${CI_COMMIT_TAG}.tar.gz.sha256sum"
-    - |
-      curl --header "JOB-TOKEN: ${CI_JOB_TOKEN}" \
-        --upload-file ${CI_PROJECT_NAMESPACE}-vault-${CI_COMMIT_TAG}.tar.gz \
-        ${PACKAGE_REGISTRY_URL}/${CI_PROJECT_NAMESPACE}-vault/${CI_COMMIT_TAG}/${CI_PROJECT_NAMESPACE}-vault-${CI_COMMIT_TAG}.tar.gz
-    - |
-      curl --header "JOB-TOKEN: ${CI_JOB_TOKEN}" \
-        --upload-file ${CI_PROJECT_NAMESPACE}-vault-${CI_COMMIT_TAG}.tar.gz.sha256sum \
-        ${PACKAGE_REGISTRY_URL}/${CI_PROJECT_NAMESPACE}-vault/${CI_COMMIT_TAG}/${CI_PROJECT_NAMESPACE}-vault-${CI_COMMIT_TAG}.tar.gz.sha256sum
-  artifacts:
-    paths:
-      - "${CI_PROJECT_NAMESPACE}-vault-${CI_COMMIT_TAG}.tar.gz"
-  rules:
-    - if: $CI_COMMIT_TAG
+  extends: .ansible-collection:build
 
 release:
-  stage: deploy
-  image: registry.gitlab.com/gitlab-org/release-cli:latest
-  variables:
-    ANSIBLE_COLLECTIONS_PATH: $CI_BUILDS_DIR/ansible/collections
-  script:
-    - |
-      release-cli create --name "Release $CI_COMMIT_TAG" \
-        --description "See ${CI_PROJECT_URL}/-/blob/${CI_COMMIT_TAG}/CHANGELOG.md for more information." \
-        --tag-name $CI_COMMIT_TAG \
-        --assets-link "{\"name\":\"${CI_PROJECT_NAMESPACE}-vault-${CI_COMMIT_TAG}.tar.gz\",\"url\":\"${PACKAGE_REGISTRY_URL}/${CI_PROJECT_NAMESPACE}-vault/${CI_COMMIT_TAG}/${CI_PROJECT_NAMESPACE}-vault-${CI_COMMIT_TAG}.tar.gz\"}" \
-        --assets-link "{\"name\":\"${CI_PROJECT_NAMESPACE}-vault-${CI_COMMIT_TAG}.tar.gz.sha256sum\",\"url\":\"${PACKAGE_REGISTRY_URL}/${CI_PROJECT_NAMESPACE}-vault/${CI_COMMIT_TAG}/${CI_PROJECT_NAMESPACE}-vault-${CI_COMMIT_TAG}.tar.gz.sha256sum\"}" \
-  rules:
-    - if: $CI_COMMIT_TAG
+  extends: .ansible-collection:release
 
 galaxy:
-  stage: deploy
-  image: ${CI_DEPENDENCY_PROXY_GROUP_IMAGE_PREFIX}/jdubz/ci-python:3.10
-  variables:
-    ANSIBLE_COLLECTIONS_PATH: $CI_BUILDS_DIR/ansible/collections
-  cache:
-    paths:
-      - .cache/pip/
-  dependencies:
-    - build
-  before_script:
-    - python -m pip install ansible-core
-  script:
-    - ansible-galaxy collection publish --token "$GALAXY_API_TOKEN" "./${CI_PROJECT_NAMESPACE}-vault-${CI_COMMIT_REF_NAME}.tar.gz"
-  rules:
-    - if: $CI_COMMIT_TAG
+  extends: .ansible-collection:galaxy
 
 release-docs:
-  stage: deploy
-  trigger: docs/ansible-collections
-  rules:
-    - if: $CI_COMMIT_TAG
+  extends: .ansible-collection:release-docs
