--- a/roles/vault_install/vars/main.yml
+++ b/roles/vault_install/vars/main.yml
@@ -3,5 +3,8 @@ vault_install_prerequisites:
   - unzip
 vault_install_architecture_map:
   x86_64: amd64
-vault_install_download_url: "https://releases.hashicorp.com/vault/{{ vault_install_version }}/vault_{{ vault_install_version }}_{{ ansible_system | lower }}_{{ [ansible_architecture] | map('extract', vault_install_architecture_map) | first }}.zip"
+vault_install_download_url: "https://releases.hashicorp.com/vault/\
+  {{ vault_install_version }}/\
+  vault_{{ vault_install_version }}_{{ ansible_system | lower }}\
+  _{{ _vault_architecture }}.zip"
 vault_install_destination: /usr/local/bin
