--- a/roles/vault_init/tasks/main.yml
+++ b/roles/vault_init/tasks/main.yml
@@ -10,10 +10,18 @@
     - "{{ vault_init_tokens_directory }}"
     - "{{ vault_init_tokens_directory }}/unseal"
 
+- name: Dump local facts
+  ansible.builtin.debug:
+    var: ansible_local
+
 - name: Assign the initialization status
   ansible.builtin.set_fact:
-    _vault_initialized: |
-      "{{ ansible_local.vault.default.initialized | default(false) | bool }}"
+    _vault_initialized: >-
+      {{ ansible_local.vault.default.initialized | default(false) | bool }}
+
+- name: Dump the initialization status
+  ansible.builtin.debug:
+    var: _vault_initialized
 
 - name: Generate Vault tokens
   ansible.builtin.command:
@@ -22,12 +30,12 @@
     VAULT_ADDR: http://127.0.0.1:8200
   register: _vault_init_results
   changed_when: true
-  when: _vault_initialized is false
+  when: not _vault_initialized
 
 - name: Parse Vault token output
   ansible.builtin.set_fact:
     _vault_init_parsed: "{{ _vault_init_results.stdout | from_json }}"
-  when: _vault_initialized is false
+  when: not _vault_initialized
 
 - name: Ensure local root key is present
   ansible.builtin.copy:
@@ -36,7 +44,7 @@
     mode: "0640"
   delegate_to: localhost
   become: false
-  when: _vault_initialized is false
+  when: not _vault_initialized
 
 - name: Ensure local unseal keys are present
   ansible.builtin.copy:
@@ -46,11 +54,11 @@
   with_indexed_items: "{{ _vault_init_parsed.unseal_keys_hex }}"
   delegate_to: localhost
   become: false
-  when: _vault_initialized is false
+  when: not _vault_initialized
 
 - name: Record the Vault initialization information
   dubzland.utils.set_persistent_fact:
     component: vault
     section: default
     option: initialized
-    value: "true"
+    value: true
