--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -7,3 +7,14 @@
       ansible.builtin.apt:
         update_cache: true
       when: ansible_os_family == 'Debian'
+    - name: Install the hvac python module
+      ansible.builtin.pip:
+        name: hvac
+        state: present
+      when: ansible_distribution_release != 'bookworm'
+    - name: Install the hvac python module on Debian bookworm
+      ansible.builtin.pip:
+        name: hvac
+        extra_args: --break-system-packages
+        state: present
+      when: ansible_os_family == 'Debian' and ansible_distribution_release == 'bookworm'
