--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
 [tool.pyright]
 extraPaths = ["../../../"]
 typeCheckingMode = "basic"
+exclude = [ ".venv" ]
+root = "./"
+venvPath = "."
+venv = ".venv"
