--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,10 +1,9 @@
-ansible-core>=2.16.0
-ansible-lint>=6.21.0
+ansible-core==2.18.2
+ansible-lint==25.1.3
 antsibull-docs
-docker>=7
+docker==7.1.0
 hvac
 jmespath
 yamllint==1.35.1
 pre-commit
-requests<2.32.4
 -r requirements-test.txt
